Fix ad styles in dark mode

--- a/assets/css/components/ads.css
+++ b/assets/css/components/ads.css
@@ -91,7 +91,6 @@
   min-height: 114px; /* 1 */
   min-width: 284px;
   background-color: light-dark(white, #222);
-  color: #444;
   margin: 0 auto;
 }
 
@@ -128,6 +127,7 @@
 #carbonads {
   display: flex;
   max-width: 330px;
+  color: inherit;
 }
 
 #carbonads a {
@@ -174,6 +174,7 @@
   display: block;
   padding: 6px 8px;
   background: #f1f1f2;
+  color: #444;
   text-align: center;
   text-transform: uppercase;
   letter-spacing: 0.5px;
